Added some drafts.

--- a/source/_drafts/2018-08-01-翻译：霍桑登的威廉·德拉蒙德的英文维基.md
+++ b/source/_drafts/2018-08-01-翻译：霍桑登的威廉·德拉蒙德的英文维基.md
@@ -32,7 +32,7 @@ Drummond was born at Hawthornden Castle, Midlothian, to John Drummond, the first
 
 <!--
 Drummond received his early education at the Royal High School of Edinburgh, and graduated in July 1605 as M.A. of the recently founded University of Edinburgh. His father was a gentleman usher at the English court (as he had been at the Scottish court from 1590) and William, in a visit to London in 1606, describes the festivities in connection with the visit of the king of Denmark. Drummond spent two years at Bourges and Paris in the study of law; and, in 1609, he was again in Scotland, where, by the death of his father in the following year, he became laird of Hawthornden at the early age of 24.[2]
-看了半日，实在不知道as he had been at the Scottish court from 1590是个啥意思。是他当时在苏格兰宫廷里面呢，还是因为他是苏格兰宫廷引见官，所以就自动变成了英格兰宫廷引见官？英国国王詹姆士六世是1603年即位的，这个原因倒是大概很清楚。
+看了半日，实在不知道as he had been at the Scottish court from 1590是个啥意思。是他当时在苏格兰宫廷里面呢，还是因为他是苏格兰宫廷引见官，所以就自动变成了英格兰宫廷引见官？英国国王詹姆士一世是1603年即位的，这个原因倒是大概很清楚。
 以及这个丹麦国王庆祝活动是什么鬼，有用吗？
 -->
 
@@ -58,13 +58,21 @@ The list of books he read up to this time is preserved in his own handwriting. I
 <!-- The poems bear marks of a close study of Sidney, and of the Italian poets. He sometimes translates direct from the Italian, especially from Giambattista Marino. Forth Feasting: A Panegyricke to the King's Most Excellent Majestie (1617), a poem written in heroic couplets of remarkable facility, celebrates James's visit to Scotland in that year. In 1618 Drummond began a correspondence with Michael Drayton. The two poets continued to write at intervals for thirteen years, the last letter being dated in the year of Drayton's death. The latter had almost been persuaded by his "dear Drummond" to print the later books of Poly-Olbion at Hart's Edinburgh press. In the winter of 1618-1619, Drummond had included Ben Jonson in his circle of literary friends, and at Christmas 1618 was honoured with a visit of a fortnight or more from the dramatist.[5] -->
 <!-- Panegyricke是panegyric的变体，意思大概是颂词。真是不查就看不出来…… -->
 <!-- to the King's Most Excellent Majestie被谷歌翻译翻成了最伟大的国王陛下。这我翻不出来== -->
-<!-- 这是哪一位英格兰的詹姆斯？ -->
-<!-- Poly-Olbion是希腊语，意思是Happy Albion。Albion是英格兰的古称。https://www.poetryfoundation.org/poets/michael-drayton -->
-<!-- 哈特的爱丁堡出版社——这啥？ -->
+<!-- 这是哪一位英格兰的詹姆斯？噢，应该是斯图亚特王朝的詹姆斯一世，他本来是苏格兰的詹姆斯六世。这些苏格兰人高兴是正常的== -->
+<!-- Poly-Olbion: having many blessings。希腊语。它的双关语是"Happy Albion"——差不多是“快乐的英格兰”吧。Albion是英格兰的古称。拼了一下，这个词可能长这样：πολυα-ολβίων
+所以《多福之国》这个翻译是哪来的？可能是有正式的德雷顿介绍吧，但感觉很难找到。
+http://www.oxfordreference.com/view/10.1093/oi/authority.20110803100335847
+https://www.poetryfoundation.org/poets/michael-drayton -->
+<!-- Hart's Edinburgh press——哈特的爱丁堡出版社——这啥？ -->
 
-这首诗显示了对西德尼和意大利诗人仔细研究的痕迹。他有时会直接翻译意大利诗歌，特别是[吉亚诺巴蒂斯塔·马里诺](https://en.wikipedia.org/wiki/Giambattista_Marino)（Giambattista Marino）的作品。1617年所作的英雄双韵体诗《宴会：为最伟大的国王陛下所作的颂词》（Forth Feasting: A Panegyricke to the King's Most Excellent Majestie）庆祝了当年詹姆斯对苏格兰的访问，其中反映了引人注目的天赋。1618年，德拉蒙德开始与[迈克尔·德雷顿](https://zh.wikipedia.org/wiki/%E8%BF%88%E5%85%8B%E5%B0%94%C2%B7%E5%BE%B7%E9%9B%B7%E9%A1%BF)通信。这两位诗人在接下来的十三年里保持了定期通信，最后一封信的时间是德雷顿的卒年。德雷顿基本上是被“亲爱的德拉蒙德”说服后，才在哈特的爱丁堡出版社出版了《》（Poly-Olbion）之后的部分。在1618-1619年的冬天，德拉蒙德把[本·琼森](https://zh.wikipedia.org/wiki/%E6%9C%AC%C2%B7%E7%90%BC%E6%A3%AE)也纳入了自己的文学朋友圈中；1618年圣诞节，这位戏剧家甚至光顾他家，逗留了两周或更多的时间。
+这首诗显示了对西德尼和意大利诗人仔细研究的痕迹。他有时会直接翻译意大利诗歌，特别是[吉亚诺巴蒂斯塔·马里诺](https://en.wikipedia.org/wiki/Giambattista_Marino)（Giambattista Marino）的作品。1617年所作的英雄双韵体诗《宴会：为最伟大的国王陛下所作的颂词》（Forth Feasting: A Panegyricke to the King's Most Excellent Majestie）庆祝了当年詹姆斯一世对苏格兰的访问，其中反映了引人注目的天赋。1618年，德拉蒙德开始与[迈克尔·德雷顿](https://zh.wikipedia.org/wiki/%E8%BF%88%E5%85%8B%E5%B0%94%C2%B7%E5%BE%B7%E9%9B%B7%E9%A1%BF)通信。这两位诗人在接下来的十三年里保持了定期通信，最后一封信的时间是德雷顿的卒年。德雷顿基本上是被“亲爱的德拉蒙德”说服后，才在哈特的爱丁堡出版社出版了《多福之国》（Poly-Olbion）后面的部分。在1618-1619年的冬天，德拉蒙德把[本·琼森](https://zh.wikipedia.org/wiki/%E6%9C%AC%C2%B7%E7%90%BC%E6%A3%AE)也纳入了自己的文学朋友圈中；1618年圣诞节，这位戏剧家甚至光顾他家，逗留了两周或更多的时间。
 
 The account of their conversations, long supposed to be lost, was discovered in the Advocates' Library, Edinburgh, by David Laing, and was edited for the Shakespeare Society in 1842 and printed by Gifford & Cunningham. The conversations are full of literary gossip, and embody Jonson's opinion of himself and of his host, whom he frankly told that "his verses were too much of the schooles, and were not after the fancie of the time," and again that he "was too good and simple, and that oft a man's modestie made a fool of his witt".[2] But the publication of what was obviously intended merely for a private journal has given Jonson an undeserved reputation for harsh judgements, and has cast blame on Drummond for blackening his guest's memory.[5]
+
+什么叫“was edited for the Shakespeare Society”？以及我找不到这个组织。
+花了好久查证Gifford & Cunningham是不是一个出版商。基本可以立刻确定Cunningham是谁，他是一个学者+编辑，但是我找不到Gifford是谁。
+
+他们的谈话记录在很长一段时间内被认为遗失后，被[大卫·拉英](https://en.wikipedia.org/wiki/David_Laing_%28antiquary%29)在爱丁堡的[大律师图书馆](https://zh.wikipedia.org/wiki/%E5%A4%A7%E5%BE%8B%E5%B8%88%E5%9B%BE%E4%B9%A6%E9%A6%86)中发现，在1842年被莎士比亚联合会编辑后，由Gifford & Cunningham出版。谈话中充满了文学八卦，体现了琼森对他自己和主人的看法，他直率地表示“他的诗歌太老派，不符合时代潮流”，以及德拉蒙德“头脑太简单，以至于故作谦虚就能让他自以为是”。
 
 In 1623 appeared the poet's fourth publication, entitled Flowers of Sion: By William Drummond of Hawthornedenne: to which is adjoyned his Cypresse Grove. From 1625 till 1630 Drummond was probably for the most part engaged in travelling on the Continent.[5] On 29 September 1626 he received a sixteen patents for diverse devices, mainly military. These included Glasses of Archimedes which could set ships afire at sea and an early form of machine gun "in which a number of musket barrels are fastened together in such a manner as to allow one man to take the place of a hundred musketeers in battle.[6] However, there is no evidence that he actually produced any of these devices.[citation needed] In 1627, however, he seems to have been home for a short time, as, in that year, he appears in the entirely new character of the holder of a patent for the construction of military machines, entitled "Litera Magistri Gulielmi Drummond de Fabrica Machinarum Militarium, Anno 1627".[5] The same year, 1627, is the date of Drummond's munificent gift (referred to above) of about 500 volumes to the library of the University of Edinburgh.[5]
 
