--- a/source/_posts/2020-02-18-PRML读书笔记：数学基础.md
+++ b/source/_posts/2020-02-18-PRML读书笔记：数学基础.md
@@ -15,6 +15,7 @@ categories: 读书笔记
 
 #### 行列式的定义
 
+{% raw %}
 $$
 \begin{aligned}
 D &= 
@@ -27,6 +28,7 @@ D &=
 &= \sum (-1)^t a_{1p_1}a_{2p_2}\cdots a_{np_n}
 \end{aligned}
 $$
+{% endraw %}
 
 其中$t$为排列$a_{1p_1}a_{2p_2}\cdots a_{np_n}$的逆序数。
 
@@ -38,7 +40,42 @@ $$
 2. 如果矩阵$A$的某一列乘以常数$c$得到矩阵$B$，则$|B| = c|A|$
 3. 如果$B$是$A$初等列变换的结果，则$|B|=|A|$
 
-## 多元高斯分布
+### 特征值与特征向量
+
+定义：设$A$是$nm$矩阵，如果存在一个数$\lambda$及非零的$n$维列向量$\boldsymbol{u}$，使得
+
+$$
+A\boldsymbol{u} = \lambda\boldsymbol{u}
+$$
+
+成立，则称$\lambda$是矩阵$A$的一个特征值，非零向量$\boldsymbol{u}$是矩阵$A$属于特征值$\lambda$的一个特征向量。
+
+
+
+## 概率论与数理统计
+
+### 伯努利分布
+
+如果随机变量$X$只取0和1两个值，且相应的概率为$P(X=1)=p$，$p(X=0)=1-p$，$0<p<1$，则称随机变量$X$服从参数为$p$的伯努利分布，$X$的概率密度函数为
+
+{% raw %}
+$$
+p(x) = \begin{cases}
+p^x (1-p)^{1-x} & x=0,1\\
+0 & x \neq 0, 1
+\end{cases}
+$$
+{% endraw %}
+
+### 高斯分布
+
+高斯分布$X \sim N(\mu, \sigma^2)$的概率密度函数为
+
+$$
+p(x) = \frac{1}{\sqrt{2\pi}\sigma} \exp{\left[ -\frac{(x-\mu)^2}{2\sigma^2} \right]}
+$$
+
+### 多元高斯分布
 
 对于多元高斯分布$\boldsymbol{X} \sim \mathcal{N}(\boldsymbol{\mu}, \boldsymbol{\Sigma})$，它的概率密度函数为：
 
