--- a/source/_posts/2020-02-25-PRML读书笔记：7-1-最大边缘分类器.md
+++ b/source/_posts/2020-02-25-PRML读书笔记：7-1-最大边缘分类器.md
@@ -99,7 +99,7 @@ $$
 \underset{\boldsymbol{w}, b}{\arg \min } \frac{1}{2}\|\boldsymbol{w}\|^{2}
 $$
 
-### 用拉格朗日乘数法求出对偶问题
+### 用拉格朗日乘数法得到对偶问题
 
 拉格朗日乘数法请参见[数学基础](/post/prml-math-foundations/)。
 
@@ -194,6 +194,8 @@ b = \frac{1}{|\mathcal{S}|} \sum_{n \in \mathcal{S}}\left(t_n - \sum_{m \in \mat
 $$
 {% endraw %}
 
+### 隐含的模型误差函数
+
 为了接下来的模型比较，将SVM的最优化问题$\underset{\boldsymbol{w}, b}{\arg \min } \frac{1}{2}\|\boldsymbol{w}\|^{2}$用带有简单二次正则化项的误差函数表示，形式为
 
 {% raw %}
@@ -209,20 +211,173 @@ $$
 
 ## 7.1.1 重叠类分布
 
+### 引入松弛变量
+
 显然训练数据点不一定是线性可分的。之前已经指出，线性可分（“硬边缘”）的SVM隐式地使用了一个误差函数，当数据点被正确分类时，这个误差函数为0，而错误分类时为无穷大。我们现在修改这种方法，使得错误分类时的惩罚不再是无穷大，而是随着分错的数据点与决策边界的距离的增大而增大，这样我们就可以得到线性不可分（“软边缘”）的SVM了。
 
-下面引入松弛变量（slack variable）$\xi_n$。将原有的精确分类限制条件$t_n y\left(\boldsymbol{x}_{n}\right) \geq 1$修改为$t_n y\left(\boldsymbol{x}_{n}\right) \geq 1 - \xi_n$，考虑以下几种情况：
+下面引入松弛变量（slack variable）$\xi_n$。将原有的精确分类限制条件$t_n y\left(\boldsymbol{x}_ {n}\right) \geq 1$修改为$t_ n y\left(\boldsymbol{x}_ {n}\right) \geq 1 - \xi_n$，考虑以下几种情况：
 
 * 点位于正确边界内部或边界上：原限制条件不用修改，$\xi_n = 0$
-* 其他点：令$\xi_n$表示点距离正确分类边界的距离，$\xi_n = |t_n y\left(\boldsymbol{x}_{n}\right) - 1| = |y\left(\boldsymbol{x}_{n}\right) - t_n|$
-  * $0 < \xi_n < 1$的点位于边缘内部，在决策边界的正确一侧
+* 其他点：令$\xi_n$表示点距离正确分类边界的距离，$\xi_n = |t _ n y\left(\boldsymbol{x} _ {n}\right) - 1| = |y\left(\boldsymbol{x} _ {n}\right) - t_ n|$
+  * $0 < \xi_n < 1$的点位于边界内部，在决策边界的正确一侧
   * $\xi_n = 1$的点位于决策面上
   * $\xi_n > 1$的点位于决策边界的错误一侧
 
 ![圆圈标记的数据点是支持向量](fig-7-3.png)
 
-现在的目标是最大化边缘并惩罚分类错误的点，于是将硬边缘SVM的误差函数$\sum_{n=1}^{N} E_{\infty}\left(y\left(\boldsymbol{x}_{n}\right) t_{n}-1\right)+\lambda\|\boldsymbol{w}\|^{2}$修改为
+### 新的误差函数
+
+现在的目标是最大化边缘并惩罚分类错误的点，于是将硬边缘SVM的误差函数$\sum_{n=1}^{N} E_ {\infty}\left(y\left(\boldsymbol{x}_ {n}\right) t_ {n}-1\right)+\lambda\|\boldsymbol{w}\|^{2}$修改为
 
 $$
 C\sum_{n=1}^N \xi_n + \frac{1}{2}\|\boldsymbol{w}\|^{2}
 $$
+
+其中参数$C>0$控制了松弛变量惩罚与最大化边缘之间的折中。由于任何被误分类的数据点都有$\xi_n > 1$，因此$\sum_n \xi_n$是误分类数据点数量的上界，相当于训练误差，因此上式可以看作是训练误差和模型参数L2正则化之和，$C$类似于作用相反的正则化系数。
+
+当$C \rightarrow \infty$时，上式就回到了硬边缘SVM的误差函数。
+
+### 用拉格朗日乘数法得到对偶问题
+
+为了在$t_n y\left(\boldsymbol{x}_{n}\right) \geq 1 - \xi_n$和$\xi_n \ge 0$的条件下最小化误差函数，引入拉格朗日乘数$\{a_n \ge 0\}$和$\{\mu_n \ge 0\}$，得到拉格朗日函数
+
+{% raw %}
+$$
+L(\boldsymbol{w}, b, \boldsymbol{\xi}, \boldsymbol{a}, \boldsymbol{\mu})=\frac{1}{2}\|\boldsymbol{w}\|^{2}+C \sum_{n=1}^{N} \xi_{n}-\sum_{n=1}^{N} a_{n}\left\{t_{n} y\left(\boldsymbol{x}_{n}\right)-1+\xi_{n}\right\}-\sum_{n=1}^{N} \mu_{n} \xi_{n}
+$$
+{% endraw %}
+
+对应的KKT条件为
+
+{% raw %}
+$$
+\begin{aligned}
+a_{n} \geq 0 \\
+t_{n} y\left(\boldsymbol{x}_{n}\right)-1+\xi_{n} \geq 0 \\
+a_{n}\left(t_{n} y\left(\boldsymbol{x}_{n}\right)-1+\xi_{n}\right)=0 \\
+\mu_{n} \geq 0 \\
+\xi_{n} \geq 0 \\
+\mu_{n} \xi_{n}=0
+\end{aligned}
+$$
+{% endraw %}
+
+下面对$\boldsymbol{w}$、$b$和$\{\xi_n\}$求偏导：
+
+{% raw %}
+$$
+\begin{aligned}
+\frac{\partial L}{\partial \boldsymbol{w}} &= \boldsymbol{w} - \sum_{n=1}^{N} a_{n} t_{n} \boldsymbol{\phi}\left(\boldsymbol{x}_{n}\right) = 0 \\
+\frac{\partial L}{\partial b} &= \sum_{n=1}^N a_n t_n = 0 \\
+\frac{\partial L}{\partial \xi_n} &= C - a_n - \mu_n = 0
+\end{aligned}
+$$
+{% endraw %}
+
+使用上述结果从拉格朗日函数中消去$\boldsymbol{w}$、$b$和$\{\xi_n\}$，得到拉格朗日函数的对偶形式：
+
+{% raw %}
+$$
+\tilde{L}(\boldsymbol{a})=\sum_{n=1}^{N} a_{n}-\frac{1}{2} \sum_{n=1}^{N} \sum_{m=1}^{N} a_{n} a_{m} t_{n} t_{m} k\left(\boldsymbol{x}_{n}, \boldsymbol{x}_{m}\right)
+$$
+{% endraw %}
+
+上述函数形式与硬边缘SVM完全相同，区别在于限制条件。由于$a_n, \mu_n \ge 0$，$a_n = C - \mu_n$，因此有$0 \le a_n \le C$，且要求$\sum_{n=1}^N a_n t_n = 0$。
+
+### 求出分类器的形式
+
+假设$\{a_n\}$已经求出，下面求解分类器的形式。
+
+将$\boldsymbol{w} = \sum_{n=1}^{N} a_{n} t_{n} \boldsymbol{\phi}\left(\boldsymbol{x}_{n}\right)$代入$y(\boldsymbol{x}) = \boldsymbol{w}^T \boldsymbol{\phi}(\boldsymbol{x}) + b$中，得到与之前相同的分类器形式
+
+$$
+y(\boldsymbol{x}) = \sum_{n=1}^N a_n t_n k(\boldsymbol{x}_{n}, \boldsymbol{x})+b
+$$
+
+同样，$a_n = 0$的点对上述模型没有贡献；$a_n \neq 0$的数据点称为支持向量，它们满足$a_n > 0$，因此根据KKT条件，必然有
+
+{% raw %}
+$$
+t_ {n} y\left(\boldsymbol{x}_ {n}\right) = 1 - \xi_ {n}
+$$
+{% endraw %}
+
+下面讨论$a_n$和$C$的关系：
+
+* 如果$a_n < C$：由于$C - a_n - \mu_n = 0$，有$\mu_n > 0$；根据KKT条件的$\mu_{n} \xi_{n}=0$，得到$\xi_n = 0$，这些点位于正确边界内部或边界上
+* 如果$a_n = C$：此时$\mu_n = 0$，由KKT条件（不等式约束的两个0不同时取到），此时$\xi_n > 0$，说明这些点位于边缘内部，且$\xi_n < 1$时被正确分类，$\xi_n \ge 1$时分类错误
+
+最后求解参数$b$。和之前一样，可以通过对所有满足$\xi_n = 0$（即$t_{n} y\left(\boldsymbol{x}_{n}\right)=1$）的支持向量取平均值，得到
+
+{% raw %}
+$$
+b=\frac{1}{N_{\mathcal{M}}} \sum_{n \in \mathcal{M}}\left(t_{n}-\sum_{m \in \mathcal{S}} a_{m} t_{m} k\left(\boldsymbol{x}_{n}, \boldsymbol{x}_{m}\right)\right)
+$$
+{% endraw %}
+
+### ν-SVM
+
+$\nu$-SVM是支持向量机的另一种等价形式，它的构造方法为
+
+{% raw %}
+$$
+\begin{aligned}
+&\underset{\mathbf{w} \in \mathcal{H}, \boldsymbol{\xi} \in \mathbb{R}^{m}, \rho, b \in \mathbb{R}}{\operatorname{minimize}} \quad & \tau(\mathbf{w}, \boldsymbol{\xi}, \rho)=\frac{1}{2}\|\mathbf{w}\|^{2}-\nu \rho+\frac{1}{m} \sum_{i=1}^{m} \xi_{i}\\
+&\text { subject to } \quad & y_{i}\left(\left\langle\mathbf{x}_{i}, \mathbf{w}\right\rangle+ b\right) \geq \rho-\xi_{i}, i=1, \ldots, m\\
+&\text { and } \quad & \xi_{i} \geq 0, \quad \rho \geq 0
+\end{aligned}
+$$
+{% endraw %}
+
+对偶函数为
+
+{% raw %}
+$$
+\tilde{L}(\boldsymbol{a})=-\frac{1}{2} \sum_{n=1}^{N} \sum_{m=1}^{N} a_{n} a_{m} t_{n} t_{m} k\left(\boldsymbol{x}_{n}, \boldsymbol{x}_{m}\right)
+$$
+{% endraw %}
+
+限制条件为
+
+{% raw %}
+$$
+\begin{aligned}
+0 \le a_n \le \frac{1}{N} \\
+\sum_{n=1}^N a_n t_n = 0 \\
+\sum_{n=1}^N a_n \ge \nu
+\end{aligned}
+$$
+{% endraw %}
+
+这种方法的优点是，参数$\nu$代替了参数$C$，它既可以被看做边缘错误（margin error）（$\xi_n \ge 0$的点）的上界，也可以被看做支持向量比例的下界。具体可以参见[A Tutorial on ν-Support Vector Machines](https://www.csie.ntu.edu.tw/~cjlin/papers/nusvmtutorial.pdf)中的第6节。
+
+### 用SMO算法求解参数
+
+公式$\tilde{L}(\boldsymbol{a})$通常是二次的，且限制条件定义了一个凸区域，因此任意局部最优解也是全局最优解。下面列出一些常见的求解方法：
+
+* 分块（chunking）：将完整的二次规划问题分解为一系列小的二次规划问题，小问题的目标是找到所有的非零拉格朗日乘数，并丢弃其他的乘数
+* 分解（decomposition）
+* SMO（sequential minimal optimazation）：每次只选择两个拉格朗日乘数，求出子问题的解析解
+
+下面给出一个[简化的SMO算法的描述](http://cs229.stanford.edu/materials/smo.pdf)。
+
+首先选择两个参数$a_i$和$a_j$。选择方法是，首先选出一个（在一定数值范围内）不满足KKT条件（$a_{n} \geq 0$且$a_{n}\left(t_{n} y\left(\boldsymbol{x}_{n}\right)-1+\xi_{n}\right)=0$）的$a_i$，然后随机选择$a_j$。（这一简化使得算法不一定能收敛到全局最优解）
+
+然后计算出$a_j$的下界$L$和上界$H$：
+
+* 如果$t_i \neq t_j$，则$L = \max{(0, a_j - a_i)}$，$H = \min{(C, C+a_j-a_i)}$
+* 如果$t_i = t_j$，则$L = \max{(0, a_i + a_j - C)}$，$H = \min{(C, a_i+a_j)}$
+
+// 此处应有例子
+
+### 核函数和维度灾难
+
+### 用SVM预测概率
+
+## 7.1.2 与logistic回归的关系
+
+## 7.1.3 多类SVM
+
+## 7.1.4 回归问题的SVM
+
+## 7.1.5 计算学习理论
