--- a/source/_posts/2020-02-25-PRML读书笔记：7-1-最大边缘分类器.md
+++ b/source/_posts/2020-02-25-PRML读书笔记：7-1-最大边缘分类器.md
@@ -361,18 +361,87 @@ $$
 
 下面给出一个[简化的SMO算法的描述](http://cs229.stanford.edu/materials/smo.pdf)。
 
-首先选择两个参数$a_i$和$a_j$。选择方法是，首先选出一个（在一定数值范围内）不满足KKT条件（$a_{n} \geq 0$且$a_{n}\left(t_{n} y\left(\boldsymbol{x}_{n}\right)-1+\xi_{n}\right)=0$）的$a_i$，然后随机选择$a_j$。（这一简化使得算法不一定能收敛到全局最优解）
+首先选择两个参数$a_i$和$a_j$。选择方法是，首先选出一个（在一定数值范围内）不满足KKT条件（$a_{n} \geq 0$且{% raw %}$a _ {n}\left(t _ {n} y\left(\boldsymbol{x} _ {n}\right)-1+\xi _ {n}\right)=0${% endraw %}）的$a_i$，然后随机选择$a_j$。（这一简化使得算法不一定能收敛到全局最优解）
 
 然后计算出$a_j$的下界$L$和上界$H$：
 
 * 如果$t_i \neq t_j$，则$L = \max{(0, a_j - a_i)}$，$H = \min{(C, C+a_j-a_i)}$
 * 如果$t_i = t_j$，则$L = \max{(0, a_i + a_j - C)}$，$H = \min{(C, a_i+a_j)}$
 
-// 此处应有例子
+求出最大化目标函数的$a_j = a_j - \frac{y_j (E_i - E_j)}{\eta}$，其中
+
+* $E_k = f(\boldsymbol{x}_k) - t_k$
+* $\eta = 2k(\boldsymbol{x}_i, \boldsymbol{x}_j) - k(\boldsymbol{x}_i, \boldsymbol{x}_i) - k(\boldsymbol{x}_j, \boldsymbol{x}_j)$（如果$\eta=0$，则换一对$a_i$，$a_j$）
+
+将$a_j$限制在$[L, H]$范围内：
+
+{% raw %}
+$$
+a_j = \begin{cases}
+H & \text{if} \, a_j > H \\
+a_j & \text{if} \, L \le a_j \le H \\
+L & \text{if} \, a_j < L \\
+\end{cases}
+$$
+{% endraw %}
+
+然后计算出$a_i$的值：
+
+$$
+a_{i} = a_{i}+t_i t_j\left(a_{j}^{(\text {old })}-a_{j}\right)
+$$
+
+最后计算出相应的$b$的值：
+
+{% raw %}
+$$
+\begin{aligned}
+b_1 &= b - E_i - t_i(a_i - a_i^{(\text{old})})k(\boldsymbol{x}_i, \boldsymbol{x}_j) - t_j(a_j - a_j^{(\text{old})})k(\boldsymbol{x}_i, \boldsymbol{x}_j) \\
+b_2 &= b - E_j - t_i(a_i - a_i^{(\text{old})})k(\boldsymbol{x}_i, \boldsymbol{x}_j) - t_j(a_j - a_j^{(\text{old})})k(\boldsymbol{x}_i, \boldsymbol{x}_j)
+\end{aligned}
+$$
+{% endraw %}
+
+{% raw %}
+$$
+\begin{aligned}
+b &=\left\{\begin{array}{ll}
+b_{1} & \text { if } 0<a_{i}<C \\
+b_{2} & \text { if } 0<a_{j}<C \\
+\left(b_{1}+b_{2}\right) / 2 & \text { otherwise }
+\end{array}\right.
+\end{aligned}
+$$
+{% endraw %}
+
+
+**例：实现一个使用SMO算法的SVM**
+
+[代码](https://github.com/zhanghuimeng/prml-code/blob/master/chp_07/07-01_01_svm.py)
+
+说实话，这段代码的数值稳定性不是很好，我都不知道自己写对了没有。下面的输出看起来还不错，但是所有的$a_i=C$，不禁令人怀疑有什么问题。
+
+![一次看起来还不错的输出](07-01_01_svm.png)
 
 ### 核函数和维度灾难
 
+核函数对应于特征空间中的内积。特征空间可以是高维的，甚至是无穷维的。
+
+（这一段我实在不知道他在说什么……）
+
 ### 用SVM预测概率
+
+为了用SVM预测概率，可以用logistic sigmoid函数拟合训练过的SVM的输出。假设需要求解的条件概率具有以下形式：
+
+$$
+p(t=1 | \boldsymbol{x})=\sigma(A y(\boldsymbol{x})+B)
+$$
+
+* $y(\boldsymbol{x}) = \boldsymbol{w}^{T} \boldsymbol{\phi}(\boldsymbol{x})+b$
+* 参数$A$和$B$的值通过最小化交叉熵误差函数确定
+* 为了防止过拟合，用于拟合sigmoid函数的数据需要独立于训练原始SVM的数据
+
+这种两阶段的方法等价于假设支持向量机的输出$y(\boldsymbol{x})$表示属于类别$t=1$的$\boldsymbol{x}$的对数概率。由于SVM的训练过程并没有体现这种倾向，因此SVM给出的对后验概率的近似结果比较差。
 
 ## 7.1.2 与logistic回归的关系
 
