--- a/source/_posts/2020-02-25-PRML读书笔记：7-1-最大边缘分类器.md
+++ b/source/_posts/2020-02-25-PRML读书笔记：7-1-最大边缘分类器.md
@@ -404,16 +404,13 @@ $$
 
 {% raw %}
 $$
-\begin{aligned}
-b &=\left\{\begin{array}{ll}
-b_{1} & \text { if } 0<a_{i}<C \\
-b_{2} & \text { if } 0<a_{j}<C \\
-\left(b_{1}+b_{2}\right) / 2 & \text { otherwise }
-\end{array}\right.
-\end{aligned}
+b = \begin{cases}
+b_1 & \text {if} \quad 0<a_i<C \\
+b_2 & \text {if} \quad 0<a_i<C \\
+\left(b_{1}+b_{2}\right) / 2 & \text {otherwise}
+\end{cases}
 $$
 {% endraw %}
-
 
 **例：实现一个使用SMO算法的SVM**
 
@@ -444,6 +441,64 @@ $$
 这种两阶段的方法等价于假设支持向量机的输出$y(\boldsymbol{x})$表示属于类别$t=1$的$\boldsymbol{x}$的对数概率。由于SVM的训练过程并没有体现这种倾向，因此SVM给出的对后验概率的近似结果比较差。
 
 ## 7.1.2 与logistic回归的关系
+
+![各种分类器的误差函数](fig-7-5.png)
+
+上图中$z = yt$。
+
+误分类误差函数（图中的黑色线）的含义为，$z > 0$（分类正确）时误差函数为0，否则为1。
+
+铰链误差函数（图中的蓝色线）是软边缘SVM的误差函数，是对误分类误差函数的一个近似，$z >= 1$（点位于正确分类边界一侧）时误差函数为0，否则误差函数随点距边界的距离线性增长。
+
+红色线是放缩过的logistic回归的误差函数，也可以被看成是对误分类误差函数的近似。
+
+绿色线是平方和误差函数。
+
+### 铰链误差函数
+
+硬边缘SVM和软边缘SVM的误差函数都可以用最小化正则化来表示：
+
+$$\sum_{n=1}^{N} E_ {\infty}\left(y\left(\boldsymbol{x}_ {n}\right) t_ {n}-1\right)+\lambda\|\boldsymbol{w}\|^{2}$$
+
+$$
+C\sum_{n=1}^N \xi_n + \frac{1}{2}\|\boldsymbol{w}\|^{2}
+$$
+
+对于软边缘SVM：
+
+* 对于$y_n t_n > 1$的数据点（完全正确分类），有$\xi_n = 0$
+* 对于其他数据点，有$\xi_n = 1 - y_n t_n$
+
+因此可以将软边缘SVM的误差函数改写为
+
+$$
+\sum_{n=1}^{N} E_{S V}\left(y_{n} t_{n}\right)+\lambda\|\boldsymbol{w}\|^{2}
+$$
+
+其中
+
+* $\lambda = (2C)^{-1}$
+* $E_{S V}$是铰链（hinge）误差函数，定义为$E_{S V}\left(y_{n} t_{n}\right)=\left[1-y_{n} t_{n}\right]_{+}$，其中$[\cdot]_+$表示正数部分
+
+### logistic回归的误差函数
+
+可以通过对似然函数取负对数的方式构造一个误差函数。带有正则化项的误差函数的形式为
+
+$$
+\sum_{n=1}^{N} E_{L R}\left(y_{n} t_{n}\right)+\lambda\|\boldsymbol{w}\|^{2}
+$$
+
+其中
+
+$$
+E_{L R}(y t)=\ln (1+\exp (-y t))
+$$
+
+这一误差函数的形式与支持向量机的误差函数类似。
+
+### 平方和误差函数
+
+这一误差函数会着重强调那些被正确分类的在正确的一侧距离决策边界较远的点。
 
 ## 7.1.3 多类SVM
 
