Some modifications to Gibbs sampling

--- a/source/_posts/2020-03-18-用Gibbs采样训练LDA模型.md
+++ b/source/_posts/2020-03-18-用Gibbs采样训练LDA模型.md
@@ -141,7 +141,7 @@ LDA模型生成文档的过程：
   * 生成文档长度$N_m \sim Poiss(\xi)$
   * 对于文档中的每个词$w_{m,n}$（$n \in [1, N_m]$）
     * 生成主题$z_{m,n} \sim Mult(\vec{\theta}_m)$
-    * 生成词汇$w_{m,n} \sim Mult(\vec{\phi}_{z_{m,n}})$
+    * 生成词汇$w _ {m,n} \sim Mult(\vec{\phi} _ {z _ {m,n}})$
 
 第$m$篇文档中的第$n$个词是$t$的概率为
 
@@ -163,7 +163,7 @@ $$P(\mathcal{W}, \mathcal{Z}, \Theta, \Phi | \vec{\alpha}, \vec{\beta})=\prod_{k
 
 ## Gibbs采样
 
-Gibbs采样是一种特殊的马尔科夫链采样方法。已知观测值为$y$，给定一个带有参数的向量$\theta = (\theta_1, \theta_2, \cdots, \theta_d)$，若$\theta_j^t$表示$\theta_j$在第$t$次迭代的采样值，则该采样值随机地取自概率分布$p(\theta_j^t | \theta_1^t, \cdots, \theta_{j-1}^t, \theta_{j+1}^{t-1}, \cdots, \theta_{d}^{t-1}, y)$
+Gibbs采样是一种特殊的马尔科夫链采样方法。已知观测值为$y$，给定一个带有参数的向量$\theta = (\theta_1, \theta_2, \cdots, \theta_d)$，若$\theta_j^t$表示$\theta_j$在第$t$次迭代的采样值，则该采样值随机地取自概率分布$p(\theta_j^t | \theta_1^t, \cdots, \theta_{j-1}^t, \theta_{j+1}^{t-1}, \cdots, \theta_{d}^{t-1}, y)$。
 
 ## 用Gibbs采样训练LDA模型
 
