Some minor changes

--- a/source/_posts/2020-02-18-PRML读书笔记：数学基础.md
+++ b/source/_posts/2020-02-18-PRML读书笔记：数学基础.md
@@ -96,6 +96,26 @@ $$
 * $\boldsymbol{\mu}$是均值，它是一个列向量
 * $\boldsymbol{\Sigma}$是协方差矩阵，它是一个方阵
 
+#### 导数
+
+$p(\boldsymbol{X})$关于$\boldsymbol{\mu}$的偏导是
+
+{% raw %}
+$$
+\frac{\partial \mathcal{N}(\boldsymbol{X} | \boldsymbol{\mu}, \boldsymbol{\Sigma})}{\partial \boldsymbol{\mu}} = \mathcal{N}(\boldsymbol{X} | \boldsymbol{\mu}, \boldsymbol{\Sigma})\boldsymbol{\Sigma}^{-1} (\boldsymbol{X} - \boldsymbol{\mu})
+$$
+{% endraw %}
+
+$p(\boldsymbol{X})$关于$\boldsymbol{\Sigma}$的偏导是
+
+{% raw %}
+$$
+\frac{\partial \mathcal{N}(\boldsymbol{X} | \boldsymbol{\mu}, \boldsymbol{\Sigma})}{\partial \boldsymbol{\Sigma}} = \frac{1}{2}\mathcal{N}(\boldsymbol{X} | \boldsymbol{\mu}, \boldsymbol{\Sigma}) (\boldsymbol{\Sigma}^{-1}(\boldsymbol{X} - \boldsymbol{\mu})(\boldsymbol{X} - \boldsymbol{\mu})^T\boldsymbol{\Sigma}^{-1} - \boldsymbol{\Sigma}^{-1})
+$$
+{% endraw %}
+
+推导过程见[Derivative of multivariate normal distribution wrt mean and covariance](https://math.stackexchange.com/a/1601672)。
+
 ## 拉格朗日乘数法
 
 拉格朗日乘数法（Lagrange multiplier）的用途是寻找多元变量在一个或多个限制条件下的驻点。
