--- a/source/_posts/2020-06-11-日记.md
+++ b/source/_posts/2020-06-11-日记.md
@@ -1,6 +1,6 @@
 ---
-title: 2020-06-11-日记
-urlname: 2020-06-11-日记
+title: 日记
+urlname: 2020-06-11-diary
 toc: true
 date: 2020-06-11 00:49:01
 updated: 2020-06-11 00:49:01
