THUMT code 2 -- data input pipeline

--- a/source/_posts/2020-08-24-日记.md
+++ b/source/_posts/2020-08-24-日记.md
@@ -5,7 +5,7 @@ toc: true
 date: 2020-08-24 15:18:06
 updated: 2020-08-24 15:18:06
 tags:
-categories:
+categories: 随笔
 ---
 
 之前那篇日记太丧了，老是摆在那里也不好，不如来写点最近的感受。
