--- a/source/_posts/2020-08-31-THUMT代码详解（2）：数据处理.md
+++ b/source/_posts/2020-08-31-THUMT代码详解（2）：数据处理.md
@@ -233,7 +233,7 @@ if params.validation:
 
 下面我们来逐个看一下。
 
-首先是`data.get_dataset`。注意到这里调用`data.get_dataset`时使用的参数是`"infer"`，也就是说不会使用[dataset.py](https://github.com/THUNLP-MT/THUMT/blob/pytorch/thumt/data/dataset.py)里的那个`eval_input_fn()`。
+首先是`data.get_dataset`。注意到这里调用`data.get_dataset`时使用的参数是`"infer"`，也就是说会使用[dataset.py](https://github.com/THUNLP-MT/THUMT/blob/pytorch/thumt/data/dataset.py)里的那个`infer_input_fn()`。
 
 ```python
 def infer_input_fn():
